added styles to flask-wtf-forms

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
           type="text/css"/>
     <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="{{ url_for("static", filename="css/styles.css") }}" rel="stylesheet"/>
 </head>
 <body>
@@ -35,54 +36,24 @@
                 <div class="text-center text-white">
                     <!-- Page heading-->
                     <h1 class="mb-5">Введите номер телефона чтобы узнать его рейтинг и посмотреть отзывы:</h1>
-                    <!-- Signup form-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
-                    <div class="container">
-                        {{ wtf.quick_form(phoneForm, novalidate=True) }}
-                    </div>
-{#                    <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">#}
-{#                        <!-- Email address input-->#}
-{#                        <div class="row">#}
-{#                            <div class="col">#}
-{#                                <input class="form-control form-control-lg" id="phoneNumber" type="text"#}
-{#                                       placeholder="например: +7(800)800-80-80" data-sb-validations="required"/>#}
-{#                                <div class="invalid-feedback text-white" data-sb-feedback="phoneNumber:required">#}
-{#                                    Поле не должно быть пустым!#}
-{#                                </div>#}
-                                {#<div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email#}
-                                {#    Address Email is not valid.#}
-                                {#</div>#}
-{#                            </div>#}
-{#                            <div class="col-auto">#}
-{#                                <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Узнать#}
-{#                                </button>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <!-- Submit success message-->#}
-{#                        <!---->#}
-{#                        <!-- This is what your users will see when the form-->#}
-{#                        <!-- has successfully submitted-->#}
-{#                        <div class="d-none" id="submitSuccessMessage">#}
-{#                            <div class="text-center mb-3">#}
-{#                                <div class="fw-bolder">Form submission successful!</div>#}
-{#                                <p>To activate this form, sign up at</p>#}
-{#                                <a class="text-white" href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <!-- Submit error message-->#}
-{#                        <!---->#}
-{#                        <!-- This is what your users will see when there is-->#}
-{#                        <!-- an error submitting the form-->#}
-{#                        <div class="d-none" id="submitErrorMessage">#}
-{#                            <div class="text-center text-danger mb-3">Error sending message!</div>#}
-{#                        </div>#}
-{#                    </form>#}
+                    <form method="POST" action="/" novalidate>
+                        {{ phoneForm.csrf_token }}
+                        <div class="row">
+                            <div class="col">
+                                {{ phoneForm.phone_number(class_="form-control") }}
+                                {% if phoneForm.phone_number.errors %}
+                                    <ul class="errors">
+                                        {% for error in phoneForm.phone_number.errors %}
+                                            <li style="list-style-type: none;"><small class="form-text text-warning">{{ error }}</small></li>
+                                        {% endfor %}
+                                    </ul>
+                                {% endif %}
+                            </div>
+                            <div class="col-3">
+                                {{ phoneForm.submit(class_="btn btn-primary btn-block") }}
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -94,145 +65,103 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                    <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
-                    <h3>Fully Responsive</h3>
-                    <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                    <div class="features-icons-icon d-flex"><i class="bi-chat-left-text m-auto text-primary"></i></div>
+                    <h3>Телеграм-Бот</h3>
+                    <p class="lead mb-0">Отправьте ему номер телефона, который хотите проверить.</p>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                    <div class="features-icons-icon d-flex"><i class="bi-layers m-auto text-primary"></i></div>
-                    <h3>Bootstrap 5 Ready</h3>
-                    <p class="lead mb-0">Featuring the latest build of the new Bootstrap 5 framework!</p>
+                    <div class="features-icons-icon d-flex"><i class="bi-cloud-check m-auto text-primary"></i></div>
+                    <h3>Бесплатный API</h3>
+                    <p class="lead mb-0">Подключите свое приложение к нашему сервису.</p>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                    <div class="features-icons-icon d-flex"><i class="bi-terminal m-auto text-primary"></i></div>
-                    <h3>Easy to Use</h3>
-                    <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+                    <div class="features-icons-icon d-flex"><i class="bi-info-circle m-auto text-primary"></i></div>
+                    <h3>Документация</h3>
+                    <p class="lead mb-0">Примеры запросов и ответов с подробным описанием полей.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 <!-- Image Showcases-->
-<section class="showcase">
-    <div class="container-fluid p-0">
-        <div class="row g-0">
-            <div class="col-lg-6 order-lg-2 text-white showcase-img"
-                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-1.jpg') }}')"></div>
-            <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                <h2>Fully Responsive Design</h2>
-                <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look
-                    great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
-            </div>
-        </div>
-        <div class="row g-0">
-            <div class="col-lg-6 text-white showcase-img"
-                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-2.jpg') }}')"></div>
-            <div class="col-lg-6 my-auto showcase-text">
-                <h2>Updated For Bootstrap 5</h2>
-                <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way
-                    in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap
-                    5!</p>
-            </div>
-        </div>
-        <div class="row g-0">
-            <div class="col-lg-6 order-lg-2 text-white showcase-img"
-                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-3.jpg') }}')"></div>
-            <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                <h2>Easy to Use & Customize</h2>
-                <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some
-                    deeper customization options. Out of the box, just add your content and images, and your new landing
-                    page will be ready to go!</p>
-            </div>
-        </div>
-    </div>
-</section>
+{#<section class="showcase">#}
+{#    <div class="container-fluid p-0">#}
+{#        <div class="row g-0">#}
+{#            <div class="col-lg-6 order-lg-2 text-white showcase-img"#}
+{#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-1.jpg') }}')"></div>#}
+{#            <div class="col-lg-6 order-lg-1 my-auto showcase-text">#}
+{#                <h2>Fully Responsive Design</h2>#}
+{#                <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look#}
+{#                    great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="row g-0">#}
+{#            <div class="col-lg-6 text-white showcase-img"#}
+{#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-2.jpg') }}')"></div>#}
+{#            <div class="col-lg-6 my-auto showcase-text">#}
+{#                <h2>Updated For Bootstrap 5</h2>#}
+{#                <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way#}
+{#                    in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap#}
+{#                    5!</p>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="row g-0">#}
+{#            <div class="col-lg-6 order-lg-2 text-white showcase-img"#}
+{#                 style="background-image: url('{{ url_for('static', filename='assets/img/bg-showcase-3.jpg') }}')"></div>#}
+{#            <div class="col-lg-6 order-lg-1 my-auto showcase-text">#}
+{#                <h2>Easy to Use & Customize</h2>#}
+{#                <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some#}
+{#                    deeper customization options. Out of the box, just add your content and images, and your new landing#}
+{#                    page will be ready to go!</p>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</section>#}
 <!-- Testimonials-->
-<section class="testimonials text-center bg-light">
-    <div class="container">
-        <h2 class="mb-5">What people are saying...</h2>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                    <img class="img-fluid rounded-circle mb-3"
-                         src="{{ url_for('static', filename='assets/img/testimonials-1.jpg') }}" alt="..."/>
-                    <h5>Margaret E.</h5>
-                    <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                    <img class="img-fluid rounded-circle mb-3"
-                         src="{{ url_for('static', filename='assets/img/testimonials-2.jpg') }}" alt="..."/>
-                    <h5>Fred S.</h5>
-                    <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super
-                        nice landing pages."</p>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                    <img class="img-fluid rounded-circle mb-3"
-                         src="{{ url_for('static', filename='assets/img/testimonials-3.jpg') }}" alt="..."/>
-                    <h5>Sarah W.</h5>
-                    <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to
-                        us!"</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+{#<section class="testimonials text-center bg-light">#}
+{#    <div class="container">#}
+{#        <h2 class="mb-5">What people are saying...</h2>#}
+{#        <div class="row">#}
+{#            <div class="col-lg-4">#}
+{#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
+{#                    <img class="img-fluid rounded-circle mb-3"#}
+{#                         src="{{ url_for('static', filename='assets/img/testimonials-1.jpg') }}" alt="..."/>#}
+{#                    <h5>Margaret E.</h5>#}
+{#                    <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="col-lg-4">#}
+{#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
+{#                    <img class="img-fluid rounded-circle mb-3"#}
+{#                         src="{{ url_for('static', filename='assets/img/testimonials-2.jpg') }}" alt="..."/>#}
+{#                    <h5>Fred S.</h5>#}
+{#                    <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super#}
+{#                        nice landing pages."</p>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="col-lg-4">#}
+{#                <div class="testimonial-item mx-auto mb-5 mb-lg-0">#}
+{#                    <img class="img-fluid rounded-circle mb-3"#}
+{#                         src="{{ url_for('static', filename='assets/img/testimonials-3.jpg') }}" alt="..."/>#}
+{#                    <h5>Sarah W.</h5>#}
+{#                    <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to#}
+{#                        us!"</p>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</section>#}
 <!-- Call to Action-->
 <section class="call-to-action text-white text-center" id="signup">
     <div class="container position-relative">
         <div class="row justify-content-center">
             <div class="col-xl-6">
                 <h2 class="mb-4">Оставьте свой email, чтобы быстрее узнавать о новых возможностях API:</h2>
-                <!-- Signup form-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- * * SB Forms Contact Form * *-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- This form is pre-integrated with SB Forms.-->
-                <!-- To make this form functional, sign up at-->
-                <!-- https://startbootstrap.com/solution/contact-forms-->
-                <!-- to get an API token!-->
-                <form class="form-subscribe" id="contactFormFooter" data-sb-form-api-token="API_TOKEN">
-                    <!-- Email address input-->
-                    <div class="row">
-                        <div class="col">
-                            <input class="form-control form-control-lg" id="emailAddressBelow" type="email"
-                                   placeholder="Адрес email" data-sb-validations="required,email"/>
-                            <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:required">Поле не должно быть пустым.
-                            </div>
-                            <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email">Введен некорректный email.
-                            </div>
-                        </div>
-                        <div class="col-auto">
-                            <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Отправить
-                            </button>
-                        </div>
-                    </div>
-                    <!-- Submit success message-->
-                    <!---->
-                    <!-- This is what your users will see when the form-->
-                    <!-- has successfully submitted-->
-                    <div class="d-none" id="submitSuccessMessage">
-                        <div class="text-center mb-3">
-                            <div class="fw-bolder">Form submission successful!</div>
-                            <p>To activate this form, sign up at</p>
-                            <a class="text-white" href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                        </div>
-                    </div>
-                    <!-- Submit error message-->
-                    <!---->
-                    <!-- This is what your users will see when there is-->
-                    <!-- an error submitting the form-->
-                    <div class="d-none" id="submitErrorMessage">
-                        <div class="text-center text-danger mb-3">Error sending message!</div>
-                    </div>
-                </form>
+                {{ wtf.quick_form(emailForm, novalidate=True) }}
             </div>
         </div>
     </div>
