--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -51,7 +51,7 @@
     <footer class="footer bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
+                <div class="col-lg-9 h-100 text-center text-lg-start my-auto">
                     <ul class="list-inline mb-2">
                         <li class="list-inline-item"><a href="#!">О сервисе</a></li>
                         <li class="list-inline-item">⋅</li>
@@ -61,9 +61,8 @@
                         <li class="list-inline-item">⋅</li>
                         <li class="list-inline-item"><a href="#!">Политика конфиденциальности</a></li>
                     </ul>
-                    <p class="text-muted small mb-4 mb-lg-0">&copy; Phony 2021. Все права защищены.</p>
                 </div>
-                <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
+                <div class="col-lg-3 h-100 text-center text-lg-end my-auto">
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item me-4">
                             <a href="#!"><i class="bi-facebook fs-3"></i></a>
@@ -78,7 +77,8 @@
                 </div>
             </div>
             <div class="row text-center mt-2">
-                <p class="text-muted small mb-4 mb-lg-0">Автор фото:
+                <p class="text-muted small mb-0 mt-5">&copy; Phony 2021. Все права защищены.</p>
+                <p class="text-muted small mb-4">Автор фото:
                     <a href="https://unsplash.com/@markuswinkler?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Winkler</a> на
                     <a href="https://unsplash.com/s/photos/search?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
                 </p>
