--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "base_template.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block title %}
+    Phony API - Главная
+{% endblock %}
+
 {% block content %}
     <!-- Masthead-->
 <header class="masthead">
