added some memojis to number page

--- a/templates/number.html
+++ b/templates/number.html
@@ -41,9 +41,9 @@
 
                 <p>
                     {% if phoneNumber.is_actual %}
-                        Информация о номере недавно обновлялась.
+                        Информация о номере недавно обновлялась ✅
                     {% else %}
-                        Информация о номере давно не обновлялась и может быть неактуальной.
+                        Информация о номере давно не обновлялась и может быть неактуальной ❌
                     {% endif %}
                 </p>
             </div>
